--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -13,6 +13,10 @@
   font-size: 12px;
 }
 
+.img-ads-container {
+  min-height: 2000px;
+  max-width: 4000px;
+}
 .img-ads {
   max-height: 2000px;
   max-width: 4000px;
@@ -158,6 +162,7 @@
   width: 100%;
   height: 100%;
 }
+
 
 .swiper-slide {
   text-align: center;
